--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
+    "handlebars-dateformat": "^1.1.1",
     "hbs": "^4.0.1",
+    "moment": "^2.20.1",
     "mongodb": "^3.0.1",
     "mongoose": "^4.13.7",
     "node-datetime": "^2.0.3",
